--- a/web/src/statistics.html
+++ b/web/src/statistics.html
@@ -144,7 +144,6 @@ title: Smile - Statistics
     $11 ==> 1.0
 
     smile> e.rand()
-    [main] INFO smile.math.MathEx - Set RNG seed 19650218 for thread main
     $12 ==> 0.38422274023788616
 
     smile> e.p(2)
@@ -215,10 +214,10 @@ title: Smile - Statistics
     smile>     import java.util.stream.*
 
     smile> var data = DoubleStream.concat(
-       ...>     DoubleStream.concat(
-       ...>         DoubleStream.generate(gaussian::rand).limit(500),
-       ...>         DoubleStream.generate(exp::rand).limit(500)),
-       ...>     DoubleStream.generate(gamma::rand).limit(1000)).toArray()
+            DoubleStream.concat(
+                DoubleStream.generate(gaussian::rand).limit(500),
+                DoubleStream.generate(exp::rand).limit(500)),
+            DoubleStream.generate(gamma::rand).limit(1000)).toArray()
     data ==> double[2000] { -2.396693222610913, -3.11796309434 ... 0928, 2.995037488374675, 1
 
     smile> var a = new Mixture.Component(0.3, new GaussianDistribution(0.0, 1.0))
@@ -511,22 +510,22 @@ title: Smile - Statistics
             <div class="code" style="text-align: left;">
           <pre class="prettyprint lang-java"><code>
     smile> double[] x = {0.48074284, -0.52975023, 1.28590721, 0.63456079, -0.41761197, 2.76072411,
-       ...>             1.30321095, -1.16454533, 2.27210509, 1.46394553, -0.31713164, 1.26247543,
-       ...>             2.65886430, 0.40773450, 1.18055440, -0.39611251, 2.13557687, 0.40878860,
-       ...>             1.28461394, -0.02906355}
+                    1.30321095, -1.16454533, 2.27210509, 1.46394553, -0.31713164, 1.26247543,
+                    2.65886430, 0.40773450, 1.18055440, -0.39611251, 2.13557687, 0.40878860,
+                    1.28461394, -0.02906355}
     x ==> double[20] { 0.48074284, -0.52975023, 1.28590721, ...  1.28461394, -0.02906355 }
 
     smile> double[] y = {1.7495879, 1.9359727, 3.1294928, 0.0861894, 2.1643415, 0.1913219,
-       ...>             -0.3947444, 1.6910837, 1.1548294, 0.2763955, 0.4794719, 3.1805501,
-       ...>             1.5700497, 2.6860190, -0.4410879, 1.8900183, 1.3422381, -0.1701592}
+                    -0.3947444, 1.6910837, 1.1548294, 0.2763955, 0.4794719, 3.1805501,
+                    1.5700497, 2.6860190, -0.4410879, 1.8900183, 1.3422381, -0.1701592}
     y ==> double[18] { 1.7495879, 1.9359727, 3.1294928, 0.0 ... 3, 1.3422381, -0.1701592 }
 
     smile> FTest.test(x, y)
     $45 ==> F-test(f = 1.0958, df1 = 17, df2 = 19, p-value = 0.841464)
 
     smile> double[] z = {0.6621329, 0.4688975, -0.1553013, 0.4564548, 2.2776146, 2.1543678,
-       ...>             2.8555142, 1.5852899, 0.9091290, 1.6060025, 1.0111968, 1.2479493,
-       ...>             0.9407034, 1.7167572, 0.5380608, 2.1290007, 1.8695506, 1.2139096}
+                    2.8555142, 1.5852899, 0.9091290, 1.6060025, 1.0111968, 1.2479493,
+                    0.9407034, 1.7167572, 0.5380608, 2.1290007, 1.8695506, 1.2139096}
     z ==> double[18] { 0.6621329, 0.4688975, -0.1553013, 0. ... 07, 1.8695506, 1.2139096 }
 
     smile> FTest.test(x, z)
@@ -707,14 +706,14 @@ title: Smile - Statistics
             <div class="code" style="text-align: left;">
           <pre class="prettyprint lang-java"><code>
     smile> double[] x = {0.53236606, -1.36750258, -1.47239199, -0.12517888, -1.24040594, 1.90357309,
-       ...>             -0.54429527, 2.22084140, -1.17209146, -0.68824211, -1.75068914, 0.48505896,
-       ...>             2.75342248, -0.90675303, -1.05971929, 0.49922388, -1.23214498, 0.79284888,
-       ...>             0.85309580, 0.17903487, 0.39894754, -0.52744720, 0.08516943, -1.93817962,
-       ...>             0.25042913, -0.56311389, -1.08608388, 0.11912253, 2.87961007, -0.72674865,
-       ...>             1.11510699, 0.39970074, 0.50060532, -0.82531807, 0.14715616, -0.96133601,
-       ...>             -0.95699473, -0.71471097, -0.50443258, 0.31690224, 0.04325009, 0.85316056,
-       ...>             0.83602606, 1.46678847, 0.46891827, 0.69968175, 0.97864326, 0.66985742,
-       ...>             -0.20922486, -0.15265994}
+                    -0.54429527, 2.22084140, -1.17209146, -0.68824211, -1.75068914, 0.48505896,
+                    2.75342248, -0.90675303, -1.05971929, 0.49922388, -1.23214498, 0.79284888,
+                    0.85309580, 0.17903487, 0.39894754, -0.52744720, 0.08516943, -1.93817962,
+                    0.25042913, -0.56311389, -1.08608388, 0.11912253, 2.87961007, -0.72674865,
+                    1.11510699, 0.39970074, 0.50060532, -0.82531807, 0.14715616, -0.96133601,
+                    -0.95699473, -0.71471097, -0.50443258, 0.31690224, 0.04325009, 0.85316056,
+                    0.83602606, 1.46678847, 0.46891827, 0.69968175, 0.97864326, 0.66985742,
+                    -0.20922486, -0.15265994}
     x ==> double[50] { 0.53236606, -1.36750258, -1.47239199 ... -0.20922486, -0.15265994 }
 
     smile> KSTest.test(x, new GaussianDistribution(0, 1))
@@ -784,10 +783,10 @@ title: Smile - Statistics
     $59 ==> Gaussian Distribution(0.0000, 1.0000) Kolmogorov-Smirnov Test(d = 0.0930, p-value = 0.759824)
 
     smile> double[] y = {0.95791391, 0.16203847, 0.56622013, 0.39252941, 0.99126354, 0.65639108,
-       ...>               0.07903248, 0.84124582, 0.76718719, 0.80756577, 0.12263981, 0.84733360,
-       ...>               0.85190907, 0.77896244, 0.84915723, 0.78225903, 0.95788055, 0.01849366,
-       ...>               0.21000365, 0.97951772, 0.60078520, 0.80534223, 0.77144013, 0.28495121,
-       ...>               0.41300867, 0.51547517, 0.78775718, 0.07564151, 0.82871088, 0.83988694}
+                      0.07903248, 0.84124582, 0.76718719, 0.80756577, 0.12263981, 0.84733360,
+                      0.85190907, 0.77896244, 0.84915723, 0.78225903, 0.95788055, 0.01849366,
+                      0.21000365, 0.97951772, 0.60078520, 0.80534223, 0.77144013, 0.28495121,
+                      0.41300867, 0.51547517, 0.78775718, 0.07564151, 0.82871088, 0.83988694}
     y ==> double[30] { 0.95791391, 0.16203847, 0.56622013,  ... , 0.82871088, 0.83988694 }
 
     smile> KSTest.test(x, y)
