--- a/web/src/vector-quantization.html
+++ b/web/src/vector-quantization.html
@@ -93,7 +93,7 @@ title: Smile - Vector Quantization
         <div class="tab-pane" id="scala_1">
             <div class="code" style="text-align: left;">
     <pre class="prettyprint lang-scala"><code>
-    val x = read.csv("data/clustering/chameleon/t4.8k.txt", header=false, delimiter=' ').toArray
+    val x = read.csv("data/clustering/chameleon/t4.8k.txt", header=false, delimiter=" ").toArray
 
     val epochs = 20
     val lattice = SOM.lattice(20, 20, x)
@@ -130,7 +130,7 @@ title: Smile - Vector Quantization
         }
     }
 
-    Hexmap.plot(som.umatrix(), Palette.jet(256)).window();
+    Hexmap.of(som.umatrix(), Palette.jet(256)).canvas().window();
           </code></pre>
             </div>
         </div>
@@ -165,7 +165,7 @@ title: Smile - Vector Quantization
             <div class="code" style="text-align: left;">
     <pre class="prettyprint lang-scala"><code>
     val dist = som.umatrix.flatten
-    val canvas = hist(dist, 100)
+    val canvas = hist(dist, 100, true)
 
     val mixture = GaussianMixture.fit(dist)
 
@@ -177,7 +177,8 @@ title: Smile - Vector Quantization
       Array(x, y)
     }.toArray
 
-    canvas.line(pdf, RED)
+    canvas.add(LinePlot.of(pdf, Color.RED))
+    show(canvas)
     </code></pre>
             </div>
         </div>
@@ -185,7 +186,7 @@ title: Smile - Vector Quantization
             <div class="code" style="text-align: left;">
           <pre class="prettyprint lang-java"><code>
     var dist = Arrays.stream(som.umatrix()).flatMapToDouble(r -> Arrays.stream(r)).toArray();
-    var canvas = smile.plot.swing.Histogram.plot(dist, 100);
+    var canvas = smile.plot.swing.Histogram.of(dist, 100, true).canvas();
 
     var mixture = GaussianMixture.fit(dist);
 
@@ -197,7 +198,7 @@ title: Smile - Vector Quantization
       pdf[i][1] = mixture.p(pdf[i][0]) * w;
     }
 
-    canvas.line(pdf, Color.RED);
+    canvas.add(LinePlot.of(pdf, Color.RED));
     canvas.window();
           </code></pre>
             </div>
@@ -221,11 +222,11 @@ title: Smile - Vector Quantization
             <div class="code" style="text-align: left;">
     <pre class="prettyprint lang-scala"><code>
     val codebook = som.neurons.flatten
-    val codebook2d = sammon(pdist(codebook, false), 2).coordinates
+    val codebook2d = sammon(pdist(codebook, false).toArray(), 2).coordinates
 
     val nodes = 20
     val neurons = (0 until nodes).map { i => codebook2d.slice(nodes*i, nodes*(i+1)) }.toArray
-    grid(neurons)
+    show(grid(neurons))
     </code></pre>
             </div>
         </div>
@@ -233,7 +234,7 @@ title: Smile - Vector Quantization
             <div class="code" style="text-align: left;">
           <pre class="prettyprint lang-java"><code>
     var codebook = Arrays.stream(som.neurons()).flatMap(r -> Arrays.stream(r)).toArray(double[][]::new);
-    var codebook2d = SammonMapping.of(MathEx.pdist(codebook, false), 2).coordinates;
+    var codebook2d = SammonMapping.of(MathEx.pdist(codebook, false).toArray(), 2).coordinates;
 
     var nodes = 20;
     var neurons = new double[nodes][nodes][];
@@ -242,7 +243,7 @@ title: Smile - Vector Quantization
             neurons[i][j] = codebook2d[k];
         }
     }
-    Grid.plot(neurons).window();
+    Grid.of(neurons).canvas().window();
           </code></pre>
             </div>
         </div>
@@ -293,7 +294,7 @@ title: Smile - Vector Quantization
     val gas = new NeuralGas(NeuralGas.seed(400, x),
                 TimeFunction.exp(0.3, x.length * epochs / 2),
                 TimeFunction.exp(30, x.length * epochs / 8),
-                x.length * 2)
+                TimeFunction.constant(x.length * 2))
 
     (1 to epochs).foreach { _ =>
         MathEx.permutate(x.length).foreach { i =>
@@ -302,7 +303,7 @@ title: Smile - Vector Quantization
     }
 
     val canvas = plot(x, '.')
-    canvas.points(gas.neurons, '#', BLUE)
+    canvas.add(ScatterPlot.of(gas.neurons, '#', BLUE))
     show(canvas)
     </code></pre>
             </div>
@@ -314,7 +315,7 @@ title: Smile - Vector Quantization
     var gas = new NeuralGas(NeuralGas.seed(400, x),
                 TimeFunction.exp(0.3, x.length * epochs / 2),
                 TimeFunction.exp(30, x.length * epochs / 8),
-                x.length * 2);
+                TimeFunction.constant(x.length * 2));
 
     for (int e = 0; e < epochs; e++) {
         for (int i : MathEx.permutate(x.length)) {
@@ -322,8 +323,8 @@ title: Smile - Vector Quantization
         }
     }
 
-    var canvas = ScatterPlot.plot(x, '.');
-    canvas.points(gas.neurons(), '#', Color.BLUE);
+    var canvas = ScatterPlot.of(x, '.').canvas();
+    canvas.add(ScatterPlot.of(gas.neurons(), '#', Color.BLUE));
     canvas.window();
           </code></pre>
             </div>
@@ -376,13 +377,13 @@ title: Smile - Vector Quantization
     }
 
     val neurons = gng.neurons
-    val win = plot(x, '.')
-    win.canvas.points(neurons.map(_.w).toArray, '@', BLUE)
+    val canvas = plot(x, '.')
+    canvas.add(ScatterPlot.of(neurons.map(_.w).toArray, '@', BLUE))
 
     import scala.jdk.CollectionConverters._
     neurons.foreach { neuron =>
       neuron.edges.asScala.foreach { edge =>
-        win.canvas.line(Array(neuron.w, edge.neighbor.w), BLUE)
+        canvas.add(LinePlot.of(Array(neuron.w, edge.neighbor.w), BLUE))
       }
     }
     show(canvas)
@@ -401,13 +402,13 @@ title: Smile - Vector Quantization
     }
 
     var neurons = gng.neurons();
-    var canvas = ScatterPlot.plot(x, '.');
-    canvas.points(Arrays.stream(neurons).map(n -> n.w).toArray(double[][]::new), '@', Color.BLUE);
+    var canvas = ScatterPlot.of(x, '.').canvas();
+    canvas.add(ScatterPlot.of(Arrays.stream(neurons).map(n -> n.w).toArray(double[][]::new), '@', Color.BLUE));
 
     Arrays.stream(neurons).forEach(neuron -> {
         neuron.edges.stream().forEach(edge -> {
             double[][] e = {neuron.w, edge.neighbor.w};
-            canvas.line(e, Color.BLUE);
+            canvas.add(LinePlot.of(e, Color.BLUE));
         });
     });
     canvas.window();
@@ -457,12 +458,12 @@ title: Smile - Vector Quantization
 
     val neurons = cortex.neurons
     val canvas = plot(x, '.')
-    canvas.points(neurons.map(_.w).toArray, '@', BLUE)
+    canvas.add(ScatterPlot.of(neurons.map(_.w).toArray, '@', BLUE))
 
     import scala.jdk.CollectionConverters._
     neurons.foreach { neuron =>
       neuron.edges.asScala.foreach { edge =>
-        win.canvas.line(Array(neuron.w, edge.neighbor.w), BLUE)
+        canvas.add(LinePlot.of(Array(neuron.w, edge.neighbor.w), BLUE))
       }
     }
     show(canvas)
@@ -484,13 +485,13 @@ title: Smile - Vector Quantization
     }
 
     var neurons = cortex.neurons();
-    var canvas = ScatterPlot.plot(x, '.');
-    canvas.points(Arrays.stream(neurons).map(n -> n.w).toArray(double[][]::new), '@', Color.BLUE);
+    var canvas = ScatterPlot.of(x, '.').canvas();
+    canvas.add(ScatterPlot.of(Arrays.stream(neurons).map(n -> n.w).toArray(double[][]::new), '@', Color.BLUE));
 
     Arrays.stream(neurons).forEach(neuron -> {
         neuron.edges.stream().forEach(edge -> {
             double[][] e = {neuron.w, edge.neighbor.w};
-            canvas.line(e, Color.BLUE);
+            canvas.add(LinePlot.of(e, Color.BLUE));
         });
     });
     canvas.window();
@@ -547,7 +548,7 @@ title: Smile - Vector Quantization
     }
 
     val canvas = plot(x, '.')
-    canvas.points(birch.centroids, '#', BLUE)
+    canvas.add(ScatterPlot.of(birch.centroids, '#', BLUE))
     show(canvas)
     </code></pre>
             </div>
@@ -560,8 +561,8 @@ title: Smile - Vector Quantization
         birch.update(xi);
     }
 
-    var canvas = ScatterPlot.plot(x, '.');
-    canvas.points(birch.centroids(), '#', Color.BLUE);
+    var canvas = ScatterPlot.of(x, '.').canvas();
+    canvas.add(ScatterPlot.of(birch.centroids(), '#', Color.BLUE));
     canvas.window();
           </code></pre>
             </div>
